--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -16,7 +16,7 @@
         android:text="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
+        android:id="@+id/titleView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:fontFamily="sans-serif"
@@ -29,8 +29,8 @@
         android:text="What's Your Bill?"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView2"
-        android:layout_below="@+id/textView"
+        android:id="@+id/billQuestion"
+        android:layout_below="@+id/titleView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp"
         android:textSize="18sp"
@@ -48,7 +48,7 @@
         android:textColor="@color/textColor"
         android:hint="in $$"
         android:singleLine="true"
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/billQuestion"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -58,7 +58,7 @@
         android:layout_below="@+id/billInitial"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="35dp"
-        android:id="@+id/textView3"
+        android:id="@+id/splitBetween"
         android:textSize="18sp"
         android:textColor="@color/textColor"
         android:textAlignment="center" />
@@ -85,14 +85,14 @@
         android:textColor="@color/textColor"
         android:hint="# of people"
         android:singleLine="true"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/splitBetween"
         android:layout_alignStart="@+id/billInitial" />
 
     <TextView
         android:text="With this much love for your waiter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView4"
+        android:id="@+id/loveWaiter"
         android:textSize="18sp"
         android:textColor="@color/textColor"
         android:textAlignment="center"
