--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ScrollViewID"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient">
+
+<LinearLayout
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_input"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.saaliklok.tipalo.input"
-    android:background="@drawable/gradient">
+    tools:context="com.saaliklok.tipalo.input" >
+
 
 
     <TextView
@@ -17,25 +25,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/titleView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:fontFamily="sans-serif"
         android:textSize="30sp"
-        android:textColor="@color/textColor"/>
-
-
+        android:textColor="@color/textColor"
+        android:layout_gravity="center"
+        android:layout_marginBottom="40dp"/>
 
     <TextView
         android:text="What's Your Bill?"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/billQuestion"
-        android:layout_below="@+id/titleView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
         android:textSize="18sp"
         android:textColor="@color/textColor"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:layout_gravity="center"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -47,32 +51,18 @@
         android:textAlignment="center"
         android:textColor="@color/textColor"
         android:hint="in $$"
-        android:singleLine="true"
-        android:layout_below="@+id/billQuestion"
-        android:layout_centerHorizontal="true" />
+        android:layout_gravity="center"
+        android:layout_marginBottom="20dp"/>
 
     <TextView
         android:text="Split Between..."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/billInitial"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp"
         android:id="@+id/splitBetween"
         android:textSize="18sp"
         android:textColor="@color/textColor"
-        android:textAlignment="center" />
-
-    <Button
-        android:text="Bill Me!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="30dp"
-        android:id="@+id/button" />
-
-
+        android:textAlignment="center"
+        android:layout_gravity="center" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -84,9 +74,8 @@
         android:textAlignment="center"
         android:textColor="@color/textColor"
         android:hint="# of people"
-        android:singleLine="true"
-        android:layout_below="@+id/splitBetween"
-        android:layout_alignStart="@+id/billInitial" />
+        android:layout_gravity="center"
+        android:layout_marginBottom="20dp"/>
 
     <TextView
         android:text="With this much love for your waiter"
@@ -96,8 +85,7 @@
         android:textSize="18sp"
         android:textColor="@color/textColor"
         android:textAlignment="center"
-        android:layout_above="@+id/tipPercent"
-        android:layout_centerHorizontal="true" />
+        android:layout_gravity="center" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -109,9 +97,67 @@
         android:textAlignment="center"
         android:textColor="@color/textColor"
         android:hint="tip %"
-        android:singleLine="true"
-        android:layout_above="@+id/button"
-        android:layout_alignStart="@+id/numberPeople"
-        android:layout_marginBottom="59dp" />
+        android:layout_gravity="center" />
 
-</RelativeLayout>
+    <Button
+        android:text="Bill Me!"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:id="@+id/button"
+        android:layout_gravity="center"/>
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/totalBillView"
+        android:textSize="40sp"
+        android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:layout_gravity="center"
+        android:layout_marginTop="60dp"/>
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/perPersonView"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tipAmountView"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tipPerPersonView"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"/>
+
+    <Button
+        android:text="Finish"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/finishButton"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center"/>
+
+</LinearLayout>
+</ScrollView>
